# trading-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
backend/: Dockerfile  config.py  main.py  requirements.txt
backend/contract_abis/: AgentRegistry.json  TradeExecutor.json  ValidationRegistry.json
backend/core/: __init__.py  indicators.py
backend/db/: __init__.py  models.py
backend/events/: __init__.py
backend/models/: __init__.py  decision.py  trade.py
backend/services/: __init__.py  blockchain_client.py  feature_engine.py  market_data.py  onchain_reader.py  position_manager.py  prediction_service.py  risk_guardian.py  trade_executor.py
backend/tests/: run_tests.py  test_trade_executor.py  test_trade_flow.py
contracts/: AgentRegistry.sol  TradeExecutor.sol  ValidationRegistry.sol  hardhat.config.js  package-lock.json  package.json
contracts/scripts/: deploy.js
contracts/src/: AgentRegistry.sol  TradeExecutor.sol
e2e-encrypt/src/: main.rs
e2e-ika/: Cargo.toml
e2e-ika/src/: main.rs
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/components/: Navbar.tsx  PriceChart.tsx  ShapChart.tsx
ml/: candles.csv  data_preparation.py  train_model.py
ml/dataset/: data_preparation.py  training_data.csv
ml/experiments/: horizon_results_20260320_185147.csv  horizon_test.py  walk_forward_results_20260320_185620.csv  walk_forward_validation.py
programs/vapm_decisions/src/: lib.rs
scripts/: setup.sh  test_market_data.py
(+2 files in other folders)
